commit to make sure we have a functional solution before making changes for prod with the new exceldocument

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block content %} {% csrf_token %}
 
-<div class="container">
+<div class="container-fluid p-0">
   <div class="calendar text-center">
     <h2>Planning de {{ current_formateur }}</h2>
     <div class="table-responsive">
@@ -35,4 +35,9 @@
   </div>
 </div>
 
+
 {% endblock %}
+
+
+
+
