--- a/templates/module_details.html
+++ b/templates/module_details.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="container mt-5">
-  <h1 class="text-center mb-4">Module Details</h1>
+  <h1 class="text-center mb-4">Details du Module</h1>
 
   <div class="table-responsive">
     <table class="table table-bordered table-striped">
       <thead class="thead-light">
         <tr>
-          <th scope="col">Key</th>
-          <th scope="col">Value</th>
+          <th scope="col">Module</th>
+          <th scope="col">Details</th>
         </tr>
       </thead>
       <tbody>
