--- a/templates/selectformateur.html
+++ b/templates/selectformateur.html
@@ -1,4 +1,8 @@
+
+
+
 {% extends "base.html" %} {% block content %}
+{% load static %}
 
 <div class="container mt-5">
   <!-- Formulaire de connexion avec card responsive -->
@@ -9,7 +13,7 @@
     style="max-width: 500px"
   >
     <h1 class="text-center mb-4">
-      <span style="color: green">Alyf</span>
+      <img src="{% static 'images/Logo-Alyf-BleuNoir-420x240.png'%}" alt="logo alyf"/>
     </h1>
 
     {% csrf_token %}
